# vehicle-sovd

./: .env.example  .gitignore  .lighthouserc.js  CLAUDE.md  Makefile  QUICK_TEST_REFERENCE.md  README.md  TEST_USER_GUIDE.md  TEST_WORKFLOW.md  docker-compose.yml  test-quick-start.sh
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  seed_db.py  seed_vehicles.py  test_proto_imports.py
backend/.codemachine/prompts/: context.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: health.py
backend/app/connectors/: vehicle_connector.py
backend/app/middleware/: error_handling_middleware.py  logging_middleware.py  rate_limiting_middleware.py  security_headers_middleware.py
backend/app/models/: __init__.py  audit_log.py  base.py  command.py  response.py  session.py  user.py  vehicle.py
backend/app/repositories/: audit_repository.py  command_repository.py  response_repository.py  user_repository.py  vehicle_repository.py
backend/app/schemas/: auth.py  command.py  response.py  vehicle.py
backend/app/services/: audit_service.py  auth_service.py  command_service.py  health_service.py  sovd_protocol_handler.py  vehicle_service.py  websocket_manager.py
backend/app/utils/: error_codes.py  logging.py  metrics.py  request_utils.py
backend/certs/: README.md
backend/docs/api/: sovd_command_schema.json
backend/protos/: sovd_vehicle_service.proto
backend/tests/: conftest.py
(+185 files in other folders)
